# chrusel-sdl2

./: CMakeLists.txt  README.md  game.cpp  game_object.cpp  main.cpp  texture_manager.cpp
include/: components.h  game.h  game_object.h  map.h  texture_manager.h
include/ecs/: components.h  ecs.h  position_component.h  sprite_component.h
src/: game.cpp  game_object.cpp  map.cpp  texture_manager.cpp
